[project]
name = "EE-ONE-D"
version = "0.0.1"
description = "A library providing lexical fuzzy semantic search."
readme = "README.md"
authors = [{ name = "EE-ONE-D Developers", email = "ee-one-d-developers@googlegroups.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License version 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["lexical", "fuzzy", "semantic", "search"]
dependencies = [
  "pytorch",
  "numpy",
  "nltk",
  "transformers",
  "expat",
  "sqlite",
  "einops",
  "torchaudio",
  "torchvision",
  "opt_einsum",
  "conda-tree"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"