[tool.poetry]
name = "ee-one-d"
version = "0.1.0"
description = ""
authors = ["Akil Krishna", "M Rishikesh", "Sri Guru Datta Pisupati","Simhadri Adhit"]
readme = "README.md"

[tool.poetry.dependencies]
python="3.12.2"
transformers = "^4.41.2"
logging = "^0.4.9.6"
pymilvus = {extras = ["model"], version = "^2.4.4"}
nltk = "^3.8.1"
torch = "^2.3.1"
typing = "*"
numpy = "^1.24.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
