[metadata]
name = EE-ONE-D
version = 0.1.0
author = EE-ONE-D Developers
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pupperemeritus/EE-ONE-D/

[options]
packages = find:
python_requires = >=3.10

[tool:pytest]
testpaths = tests